[gd_scene load_steps=4 format=3 uid="uid://bs7c3tmgq5x07"]

[ext_resource type="Script" uid="uid://b6lhl1l4oldrr" path="res://scripts/world.gd" id="1_32lhk"]
[ext_resource type="Script" uid="uid://8yxowflsuspv" path="res://scripts/grid_overlay.gd" id="2_7g83o"]
[ext_resource type="PackedScene" uid="uid://bdxf5qro8som2" path="res://scenes/Ship.tscn" id="2_32lhk"]

[node name="World" type="Node2D"]
process_mode = 3
position = Vector2(-1, 0)
script = ExtResource("1_32lhk")

[node name="GridOverlay" type="Node2D" parent="."]
script = ExtResource("2_7g83o")

[node name="Ship" parent="." instance=ExtResource("2_32lhk")]
process_mode = 3

[node name="Camera2D" type="Camera2D" parent="Ship"]
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="TuningPanel" type="PanelContainer" parent="UI"]
custom_minimum_size = Vector2(300, 0)
offset_right = 150.0
offset_bottom = 77.0

[node name="VBox" type="VBoxContainer" parent="UI/TuningPanel"]
layout_mode = 2

[node name="HBoxThrust" type="HBoxContainer" parent="UI/TuningPanel/VBox"]
layout_mode = 2

[node name="LabelThrust" type="Label" parent="UI/TuningPanel/VBox/HBoxThrust"]
layout_mode = 2

[node name="HSliderThrust" type="HSlider" parent="UI/TuningPanel/VBox/HBoxThrust"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 300.0
max_value = 1800.0
step = 10.0
value = 900.0

[node name="HBoxDamp" type="HBoxContainer" parent="UI/TuningPanel/VBox"]
layout_mode = 2

[node name="LabelDamp" type="Label" parent="UI/TuningPanel/VBox/HBoxDamp"]
layout_mode = 2

[node name="HSliderDamp" type="HSlider" parent="UI/TuningPanel/VBox/HBoxDamp"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.5
step = 0.05
value = 0.3

[node name="HBoxTurn" type="HBoxContainer" parent="UI/TuningPanel/VBox"]
layout_mode = 2

[node name="LabelTurn" type="Label" parent="UI/TuningPanel/VBox/HBoxTurn"]
layout_mode = 2

[node name="HSliderTurn" type="HSlider" parent="UI/TuningPanel/VBox/HBoxTurn"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 7.0
step = 0.1
value = 3.5

[node name="HBoxFuelBurn" type="HBoxContainer" parent="UI/TuningPanel/VBox"]
layout_mode = 2

[node name="LabelFuelBurn" type="Label" parent="UI/TuningPanel/VBox/HBoxFuelBurn"]
layout_mode = 2

[node name="HSliderFuelBurn" type="HSlider" parent="UI/TuningPanel/VBox/HBoxFuelBurn"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 60.0
value = 18.0

[node name="HBoxMaxFuel" type="HBoxContainer" parent="UI/TuningPanel/VBox"]
layout_mode = 2

[node name="LabelMaxFuel" type="Label" parent="UI/TuningPanel/VBox/HBoxMaxFuel"]
layout_mode = 2

[node name="HSliderMaxFuel" type="HSlider" parent="UI/TuningPanel/VBox/HBoxMaxFuel"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 100.0
max_value = 1000.0
value = 500.0
